Bug 791912 - Fix crash when using libstagefright during video playback shutdown on B2G - r=cpearce